--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "author": "smp",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.1",
+    "@babel/preset-env": "^7.12.10",
+    "@getbrevo/brevo": "^3.0.1",
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
@@ -35,10 +39,7 @@
     "openai": "^6.15.0",
     "sequelize": "^6.37.7",
     "sharp": "^0.32.6",
-    "uuid": "^8.3.2",
-    "@babel/core": "^7.12.10",
-    "@babel/node": "^7.12.1",
-    "@babel/preset-env": "^7.12.10"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
